@@ -24,16 +24,22 @@
  */
 package co.elastic.apm.agent.configuration.converter;
 
-import org.stagemonitor.configuration.ConfigurationOption;
 import org.stagemonitor.configuration.converter.AbstractValueConverter;
 import org.stagemonitor.configuration.converter.DoubleValueConverter;
 
+import java.text.DecimalFormat;
+import java.text.NumberFormat;
+
 public class RoundedDoubleConverter extends AbstractValueConverter<Double> {
 
-    private final int precisionDigits;
+    public static final int DEFAULT_PRECISION = 4;
+    private static final RoundedDoubleConverter DEFAULT_INSTANCE = new RoundedDoubleConverter(DEFAULT_PRECISION);
 
-    public static ConfigurationOption.ConfigurationOptionBuilder<Double> withPrecision(int precisionDigits) {
-        return ConfigurationOption.builder(new RoundedDoubleConverter(precisionDigits), Double.class);
+    private final double precisionFactor;
+    private final NumberFormat numberFormat;
+
+    public static RoundedDoubleConverter withDefaultPrecision() {
+        return DEFAULT_INSTANCE;
     }
 
     // package protected for testing
@@ -41,19 +47,30 @@ public class RoundedDoubleConverter extends AbstractValueConverter<Double> {
         if (precisionDigits < 0) {
             throw new IllegalArgumentException("expects a zero-or-positive precision");
         }
-        this.precisionDigits = precisionDigits;
+        StringBuilder format = new StringBuilder("#.");
+        for (int i = 0; i < precisionDigits; i++) {
+            format.append("#");
+        }
+        this.numberFormat = new DecimalFormat(format.toString());
+        this.precisionFactor = Math.pow(10, precisionDigits);
     }
 
     @Override
     public Double convert(String s) throws IllegalArgumentException {
-        Double value = DoubleValueConverter.INSTANCE.convert(s);
-        double f = Math.pow(10, precisionDigits);
-        value = Math.round(value * f) / f;
-        return value;
+        return round(DoubleValueConverter.INSTANCE.convert(s));
     }
 
     @Override
     public String toString(Double value) {
-        return DoubleValueConverter.INSTANCE.toString(value);
+        return numberFormat.format(value);
+    }
+
+    public double round(double value) {
+        double rounded = Math.round(value * precisionFactor) / precisionFactor;
+        if (value > 0 && rounded == 0) {
+            // avoid rounding to zero
+            rounded = 1d / precisionFactor;
+        }
+        return rounded;
     }
 }
