@@ -35,17 +35,18 @@ class RoundedDoubleConverterTest {
 
     @ParameterizedTest
     @CsvSource({
+        "0.00001,0.0001",
         "0.55554,0.5555",
         "0.55555,0.5556",
-        "0.55556,0.5556"})
-    void testRounding(String input, String expectedOutput) {
+        "0.55556,0.5556",
+        "10.000,10"})
+    void testRoundingAndTextFormat(String input, String expectedOutput) {
         RoundedDoubleConverter converter = new RoundedDoubleConverter(4);
 
         Double expected = Double.valueOf(expectedOutput);
         Double converted = converter.convert(input);
 
         assertThat(converted).isEqualTo(expected);
-        assertThat(converted.toString()).isEqualTo(expectedOutput);
         assertThat(converter.toString(converted)).isEqualTo(expectedOutput);
     }
 
